style.css
a {
    color: red;
}

body {
    background-color: #F2F5ED;
}


/* 992px fixed-width website*/

.container {
    margin: auto;
    border-radius: 10px;
    border: 1px solid #73AD21;
    background-color: #FFFFFF;
    box-shadow: 5px 8px 5px #EBEBEB;
}

.logo {
    height: 100px;
}

.account {
    float: right;
    padding: 5px 20px;
}

.account ul {
    color: red;
}

.account li {
    display: inline;
}


/*| character separating the list items at the top right*/

.account li + li::before {
    content: " | ";
}


/* links do not appear as underlined when not hovered  
2 full seconds to change font color and background color
*/

.account a {
    text-decoration: none;
    background-color: white;
    color: red;
    transition-property: color background-color;
    transition-duration: 2s;
    transition-timing-function: ease;
    -webkit-transition-property: color background-color;
    -webkit-transition-duration: 2s;
    -webkit-transition-timing-function: ease;
}


/* on hover  changing the font color of  links and link's background to a very different color 
 2 full seconds to change font color and background color
*/

.account a:hover {
    background-color: #73AD21;
    text-decoration: underline;
    color: black;
    transition-property: color background-color;
    transition-duration: 2s;
    transition-timing-function: ease;
    -webkit-transition-property: color background-color;
    -webkit-transition-duration: 2s;
    -webkit-transition-timing-function: ease;
}

nav {
    clear: left;
    text-align: center;
    font-size: 20px;
}

nav ul {
    display: inline-block;
    border-left-color: 1px solid #f2f2f2;
}

nav li a {
    text-decoration: none;
    color: black;
}

article .photo img,
.usersection .photo .img {
    height: 100px;
    float: left;
    padding-left: 20px;
}

article,
.user,.usersection,
.octopus {
    clear: left;
    padding: 15px;
    border-bottom: 1px solid #F2F2F2;
    min-height: 110px;
}

.description {
    padding: 10px 20px;
    clear: right;
}

.statuses,
.usersection,
.octopussection {
    float: left;
    padding: 5px 0;
    width: 70%;
    border: 1px solid #73AD21;
}


/*a small box to welcome  users, and advise them that the application is in beta. */

.bottom-right {
    font-size: 18px;
    font-family: Arial;
    border: 1px solid #73AD21;
    padding: 5px 0px;
    border-radius: 10px;
    background-color: #FFFFFF;
    margin: 0.1em;
}

.status .name {
    font-weight: bold;
    font-family: arial;
    float: left;
}

.date {
    float: right;
    margin-right: 1.2em;
}

h2 {
    font-weight: bold;
    font-family: arial;
}

aside .photo img {
    height: 50px;
}

aside {
    float: right;
    padding: 5px 0 30px;
    width: 25%;
    overflow: auto;
}

.statuses,
aside .users, 
.ads,
.usersection,
.octopussection {
    margin-top: 1.1em;
    border-radius: 10px;
    background-color: #FFFFFF;
    box-shadow: 5px 8px 5px #EBEBEB;
    border: 1px solid #73AD21;   
}

.users {
    padding-top: 15px;
    clear: left;
}

.usersection,
.octopussection {
   width: 99%;
}

nav ul li {
    float: left;
    margin: 0.3em 0.6em;
}

.octopus {
    min-height: 200px;
}

.octopus .description,
.octopus h2 {
    padding: 10px 50px;
    clear: right;
    margin-left: 90px;
}

.octopussection h1 {
    font-size: 40px;
    padding: 50px;
    font-family: fantasy;
    font-weight: 200;
}


/*Nav Link Buttons*/

.navButton {
    background-color: #F2F5ED;
    color: #222222;
    text-decoration: none;
    display: inline-block;
    font-size: 21px;
    cursor: pointer;
    transition: background-color 2s, color 2s;
    border-bottom: #73AD21 solid 0px;
    background-position: 0 100%;
}

.navButton:hover {
    border-bottom: #73AD21 solid 3px;
    background-color: white;
    color: #73AD21;
    background-position: 0 -100%;
}

.navButton:active {
    border-bottom: red solid 3px;
    background-color: #F2F2F2;
    color: #73AD21;
}


/*End*/


/*media queries  for width<768px*/

@media screen and (max-width:768px) {
    /*All of them must be fluid (take as much as they can of the screen's width), with 15px of margins to the left and right of (at least) the text, for the user's reading comfort.*/
    .container {
        margin: 0px 15px;
    }
    .statuses {
        width: 100%;
    }
    /*under them should be the block(s) that used to be at the right of your screen, in the aside;*/
    aside {
        clear: left;
        float: left;
        width: 100%;
    }
    /*the "beta" box at the bottom-right should be at the very bottom;*/
    .bottom-right {
        float: left;
        width: 100%;
    }
    /*the logo should be above the two menus, which should be one above the other;*/
    .account {
        float: right;
        padding: 5px 20px;
    }
    .navButton {
        padding: 3px 1px;
        border: 1px solid #dedede;
        border-top-left-radius: 3px;
        border-top-right-radius: 3px;
        padding-bottom: 8px !important;
    }
    h2 {
        word-wrap: break-word;
    }
    nav {
        height: 70px;
        clear: right;
    }
    nav ul li {
        margin: 0.3em 0.1em;
    }
    .status time {
        margin-right: 0.2em;
        font-size: 12px;
    }
    .status .name {
        font-size: 12px;
    }
}

@media screen and (max-width:992px) and (min-width:768px) {
    .logo-wrapper {
        float: left;
        padding: 5px 30px;
    }
    .account {
        float: right;
        padding: 5px 20px;
    }
    .navButton {
        padding: 3px 21px;
        border: 1px solid #dedede;
        border-top-left-radius: 3px;
        border-top-right-radius: 3px;
        padding-bottom: 8px !important;
    }
    nav {
        height: 50px;
    }
    .statuses {
        width: 100%;
    }
    aside {
        clear: both;
        width: 79%;
        float: left;
    }
    /*under them should be the block(s) that used to be at the right of your screen, in the aside;*/
    .users {
        float: left;
        width: 48%;
        margin: 0px 4px;
    }
    .ads {
        float: left;
        width: 48%;
        margin: 0px 1px;
    }
    /*the "beta" box at the bottom-right should be at the very bottom;*/
    .bottom-right {
        float: left;
        width: 20%;
        margin: 5px 2px;
    }
}

@media screen and (min-width:992px) {
    .bottom-right {
        position: fixed;
        bottom: 0;
        right: 0;
    }
    /* 992px fixed-width website*/
    .container {
        width: 992px;
    }
    .logo-wrapper {
        float: left;
        padding: 5px 30px;
    }
    .account {
        float: right;
        padding: 5px 20px;
    }
    .navButton {
        padding: 3px 21px;
        border: 1px solid #dedede;
        border-top-left-radius: 3px;
        border-top-right-radius: 3px;
        padding-bottom: 8px !important;
    }
    nav {
        height: 50px;
    }
}


/*media queries */

